Add changes to avoid generating duplicates. Add bug fixes and extract config params to its own class.